Fixes z-index for sidebar

--- a/docs/styles/pattern-library.less
+++ b/docs/styles/pattern-library.less
@@ -365,7 +365,7 @@ body {
     margin: 0;
     position: fixed;
     width: @pl-sidebar-width;
-    z-index: 1;
+    z-index: @zindex-navbar-fixed;
     // border-right: 1px solid #ddd;
 
     background: @pl-sidebar-bg;
